--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
+    "playwright/no-standalone-expect": "false",
     "prettier/prettier": ["error"],
     "indent": ["error", 2],
     "semi": ["error", "always"],
