--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "node": ">=10.6.0"
   },
   "description": "Playwright demo by Chris Atkinson",
-  "main": "index.js",
   "scripts": {
     "pretty": "npx prettier . --write",
     "lint": "eslint .",
     "test": "npx playwright test",
-    "test:ui": "npx playwright test --ui",
     "test:head": "npx playwright test --headed",
+    "test:ui": "npx playwright test --ui",
+    "test:smoke": "npx playwright test --grep smoke",
     "report": "npx playwright show-report"
   },
   "keywords": [],
