--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,20 +3,16 @@ jobs:
   run-test:
     docker:
       - image: mcr.microsoft.com/playwright:v1.27.1-focal
-    # Steps to the job
     steps:
       - checkout
       - run:
-          name: Download dependency
-          environment:
-            SECRET_KEY: SECRET_KEY
+          name: Download dependencies
           command: npm ci
       - run:
           name: Run tests
           command: npm run test
       - store_test_results:
           path: results.xml
-# Invoke jobs via workflows
 workflows:
   run-test-workflow:
     jobs:
